# novae

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  test_deploy_publish.yml
advice/: index.html
api/Novae/: index.html
api/data/: index.html
api/dataloader/: index.html
api/metrics/: index.html
api/modules/: index.html
api/novae.Novae/: index.html
api/novae.data.AnnDataTorch/: index.html  novae.data.AnnDataTorch.md
api/novae.data.NovaeDatamodule/: index.html  novae.data.NovaeDatamodule.md
api/novae.data.NovaeDataset/: index.html
api/novae.module.AttentionAggregation/: index.html  novae.module.AttentionAggregation.md
api/novae.module.CellEmbedder/: index.html
api/novae.module.GraphAugmentation/: index.html  novae.module.GraphAugmentation.md
api/novae.module.GraphEncoder/: index.html  novae.module.GraphEncoder.md
api/novae.module.SwavHead/: index.html  novae.module.SwavHead.md
api/novae.monitor/: index.html  novae.monitor.md
api/novae.plot/: index.html
api/novae.utils/: index.html  novae.utils.md
api/plot/: index.html
api/utils/: index.html
cite_us/: cite_us.md  index.html
config/: README.md  debug.yaml  shuffle_v0.yaml  swav_gpu_0.yaml  swav_local_0.yaml  swav_v0.yaml
data/: 1_download_all.sh  2_prepare.py  README.md  cosmx_convert.py  cosmx_download.sh  stereoseq_download.sh  xenium_convert.py  xenium_download.sh
data/_scripts/: 2_prepare.py  merscope_convert.py  merscope_download.sh  merscope_download2.sh  merscope_download3.sh  stereoseq_convert.py  xenium_convert.py  xenium_download.sh
data/download/: README.md  all.sh  merscope_download.sh  vizgen_convert.py  vizgen_download.sh  xenium_download.sh
data/scripts/: merscope_convert.py  xenium_convert.py  xenium_download.sh
docker/novae/: Dockerfile
docker/novae-cuda12.9/: Dockerfile
docker/novae-multimodal-cuda12.9/: Dockerfile
docs/: advice.md  cite_us.md  faq.md  format_docstrings.py  getting_started.md  index.md
docs/api/: Novae.md  data.md  dataloader.md  metrics.md  modules.md  novae.data.NeighborhoodDataset.md  novae.data.NovaeDataset.md  novae.module.CellEmbedder.md  novae.module.InferenceHeadZIE.md  novae.plot.md  novae.utils.md  plot.md  utils.md
docs/tutorials/: download_xenium_sample.sh  he_usage.ipynb  input_modes.ipynb  input_modes.md  main_usage.ipynb  multi_tissue.ipynb  proteins.ipynb  resolutions.ipynb
faq/: index.html
format_docstrings/: index.html
getting_started/: getting_started.md  index.html
graph_lr/: __init__.py  _constants.py  data.py  loss.py  main.py  model.py  module.py  sampling.py
graph_lr/data/: __init__.py  convert.py  dataset.py  loader.py
graph_lr/eval/: sdm_bench.py
graph_lr/module/: __init__.py  aggregation.py  backbone.py  embedding.py  head.py  pooling.py
graph_lr/monitor/: callback.py  eval.py  log.py
graph_lr/utils/: __init__.py  _build.py  monitor.py  utils.py
novae/: __init__.py  _constants.py  _settings.py  model.py
novae/data/: __init__.py  convert.py  datamodule.py  dataset.py  load.py  preprocess.py  toy.py
novae/module/: __init__.py  aggregate.py  aggregation.py  augment.py  augmentation.py  backbone.py  embed.py  embedding.py  encode.py  head.py  infer.py  swav.py
novae/monitor/: __init__.py  callback.py  eval.py  log.py
novae/plot/: __init__.py  _bar.py  _graph.py  _heatmap.py  _line.py  _radar.py  _spatial.py  _umap.py  _utils.py
novae/utils/: __init__.py  _annotate_domains.py  _annotation.py  _build.py  _correct.py  _correction.py  _data.py  _docs.py  _histo.py  _mode.py  _plot.py  _preprocess.py  _utils.py  _validate.py  build.py  mode.py  utils.py
scripts/: README.md  config.py  missing_domain.py  sweep.py  toy_missing_domain.py  train.py  utils.py
scripts/config/: README.md  _example.yaml  all.yaml  all_0.yaml  all_1.yaml  all_10.yaml  all_11.yaml  all_12.yaml  all_13.yaml  all_14.yaml  all_15.yaml  all_16.yaml  all_17.yaml  all_2.yaml  all_3.yaml  all_4.yaml  all_5.yaml  all_6.yaml  all_7.yaml  all_8.yaml  all_9.yaml  all_brain.yaml  all_counts.yaml  all_cpu.yaml  all_human.yaml  all_human2.yaml  all_human3.1.yaml  all_human3.2.yaml  all_human3.3.yaml  all_human3.4.yaml  all_human3.5.yaml  all_human3_koleo.yaml  all_mouse.yaml  all_new.yaml  all_ruche.yaml  all_spot.yaml  brain.yaml  brain2.yaml  breast.yaml  breast_zs.yaml  (+48 more)
scripts/experimental/: concept_embeddings.py  embeddings.py  get_graphs.py  projection_embeddings.py
scripts/flamingo/: README.md  debug.sh  download.sh  gpu.sh  prepare.sh
scripts/revision/: add_he.py  artif_batch_effect.py  cpu-multimodal.sh  cpu.sh  gpu-multimodal.sh  gpu.sh  heterogeneous.py  heterogeneous_start.py  hops.py  mgc.py  missing_domains.py  missing_domains_sanity_check.py  multimodal.py  perturbations.py  prepare_tuto.py  prepare_tuto_plot.py  seg_robustness.py  sparsity.py
scripts/ruche/: README.md  agent.sh  concept.sh  convert.sh  cpu.sh  debug.sh  debug_cpu.sh  debug_gpu.sh  download.sh  download1.sh  download2.sh  download3.sh  download4.sh  download5.sh  download6.sh  download7.sh  download8.sh  download9.sh  experimental.sh  experimental_concept.sh  gpu.sh  install.sh  install2.sh  install3.sh  prepare.sh  sync.sh  test.sh
scripts/slurm/: agent.sh  agent_cpu.sh  debug.sh  download.sh  prepare.sh  train.sh  train_cpu.sh  train_cpu_ruche.sh
scripts/sweep/: README.md  cpu.yaml  debug.yaml  gpu.yaml  gpu_ruche.yaml  lung.yaml  revision.yaml  revision2.yaml  revision3.1.yaml  revision3.2.yaml  toy.yaml
search/: search_index.json
tests/: _utils.py  test_backend.py  test_correction.py  test_dataset.py  test_he.py  test_infer.py  test_load_model.py  test_metrics.py  test_misc.py  test_model.py  test_model_input.py  test_neighbors.py  test_plots.py  test_prototypes.py  test_reference.py  test_remote.py  test_train.py  test_utils.py  test_validation.py
tutorials/: LEE_AGING_CEREBELLUM_UP.json  hallmarks_pathways.json  mouse_hallmarks.json
(+34 files in other folders)
